syntax = "proto3";

package common;
option go_package = "github.com/arkhaix/lit-reader/api/common";

message Status {
  int32 statusCode = 1;
  string statusText = 2;
}